--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ workflows:
       - test-2.7
       - test-3.5
       - test-3.6
+      - test-3.7
+      - test-3.8
+      - test-3.9
+      - test-3.10
       - test-latest
 jobs:
   test-3.6: &test-template
@@ -41,13 +45,37 @@ jobs:
           name: Run test suite
           command: |
             . venv/bin/activate
-            nosetests .
+            pytest
   test-3.5:
     <<: *test-template
     docker:
       - image: circleci/python:3.5
     environment:
       PYTHON_VERSION=3.5
+  test-3.7:
+    <<: *test-template
+    docker:
+      - image: circleci/python:3.7
+    environment:
+      PYTHON_VERSION=3.7
+  test-3.8:
+    <<: *test-template
+    docker:
+      - image: circleci/python:3.8
+    environment:
+      PYTHON_VERSION=3.8
+  test-3.9:
+    <<: *test-template
+    docker:
+      - image: circleci/python:3.9
+    environment:
+      PYTHON_VERSION=3.9
+  test-3.10:
+    <<: *test-template
+    docker:
+      - image: circleci/python:3.10
+    environment:
+      PYTHON_VERSION=3.10
   test-2.7:
     <<: *test-template
     docker:
