--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ workflows:
   version: 2
   test:
     jobs:
-      - test-2.7
       - test-3.5
       - test-3.6
       - test-3.7
@@ -33,7 +32,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            python -m venv venv || virtualenv -p /usr/bin/python2.7 venv
+            python -m venv venv
             . venv/bin/activate
             pip install -e .[dev]
       - save_cache:
@@ -76,12 +75,6 @@ jobs:
       - image: circleci/python:3.10
     environment:
       PYTHON_VERSION=3.10
-  test-2.7:
-    <<: *test-template
-    docker:
-      - image: circleci/python:2.7
-    environment:
-      PYTHON_VERSION=2.7
   test-latest:
     <<: *test-template
     docker:
